--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"license": "ISC",
 	"dependencies": {
+		"@ant-design/icons": "^6.0.0",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.5.1",
 		"cookie-parser": "^1.4.7",
@@ -23,6 +24,7 @@
 		"ioredis": "^5.4.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.9.5",
+		"multer": "^1.4.5-lts.2",
 		"stripe": "^17.5.0"
 	},
 	"devDependencies": {
