--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.5.1",
 		"cookie-parser": "^1.4.7",
+		"crypto": "^1.0.1",
+		"crypto-js": "^4.2.0",
 		"dotenv": "^16.4.7",
 		"e-commerce-store": "file:",
 		"eccomercestore": "file:",
@@ -24,7 +26,8 @@
 		"ioredis": "^5.4.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.9.5",
-		"multer": "^1.4.5-lts.2",
+		"multer": "^1.4.7",
+		"nodemailer": "^7.0.3",
 		"stripe": "^17.5.0"
 	},
 	"devDependencies": {
