--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"ioredis": "^5.4.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.9.5",
-		"multer": "^1.4.7",
+		"multer": "^1.4.5-lts.2",
 		"nodemailer": "^7.0.3",
 		"stripe": "^17.5.0"
 	},
